--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-python-dotenv
-requests
-langchain>=0.1.14
-langchain-google-genai
-langchain-community
-pinecone
-protobuf<4.0.0
-setuptools==65.5.0
-google-api-core==2.14.0
+streamlit==1.31.1
+python-dotenv==1.0.1
+langchain==0.1.14
+langchain-community==0.0.30
+langchain-google-genai==0.0.5
+pinecone-client==3.0.2
+google-generativeai==0.3.2
+serper==0.1.2
+tqdm==4.66.2
