--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+# Core dependencies
 streamlit==1.31.1
 python-dotenv==1.0.1
+
+# LangChain + integrations
 langchain==0.1.14
 langchain-community==0.0.30
 langchain-google-genai==0.0.5
+
+# Vector store
 pinecone-client==3.0.2
+
+# Google Generative AI SDK
 google-generativeai==0.3.2
-serper==0.1.2
+
+# Web search (correct Serper SDK)
+serper-python==0.1.3
+
+# Optional utils
 tqdm==4.66.2
